--- a/DataAccess/DataAccessLayer.csproj
+++ b/DataAccess/DataAccessLayer.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILogger.cs" />
-    <Compile Include="Logger.cs" />
+    <Compile Include="Loggers\ILogger.cs" />
+    <Compile Include="Loggers\Logger.cs" />
     <Compile Include="Options\OptionsLib.cs" />
     <Compile Include="Options\ConnectionStrings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,5 +68,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
